fix: changed lore to align with GUI design