@@ -28,7 +28,8 @@ public class GroundskeeperOneSkill extends Skill {
         ItemStack icon = new ItemStack(Material.SHEARS);
         ItemMeta meta = icon.getItemMeta();
         meta.displayName(ColorParser.of("<green><bold>" + super.getName() + "</green></bold>").build());
-        meta.lore(Collections.singletonList(ColorParser.of("<gray><italics>" + super.getDescription() + "</gray></italics>").build()));
+        meta.lore(List.of(ColorParser.of("<yellow>Level 6</yellow>").build(),
+            ColorParser.of("<red><italics>" + super.getDescription() + "</gray></italics>").build()));
         icon.setItemMeta(meta);
         super.setIcon(icon);
 
@@ -38,7 +39,7 @@ public class GroundskeeperOneSkill extends Skill {
 
 
 
-
+    // TODO: possibly refactor this skill run
     public static void runGroundskeeperOneSkill(BlockBreakEvent event) {
         Block block = event.getBlock();
         Material material = block.getType();
