@@ -11,6 +11,7 @@ import org.bukkit.plugin.Plugin;
 import org.bukkit.scheduler.BukkitTask;
 
 import java.util.Collections;
+import java.util.List;
 
 public class OneSwingTwoSkill extends Skill {
 
@@ -22,12 +23,12 @@ public class OneSwingTwoSkill extends Skill {
         ItemStack icon = new ItemStack(Material.NETHERITE_AXE);
         ItemMeta meta = icon.getItemMeta();
         meta.displayName(ColorParser.of("<green><bold>" + super.getName() + "</green></bold>").build());
-        meta.lore(Collections.singletonList(ColorParser.of("<gray><italics>" + super.getDescription() + "</gray></italics>").build()));
+        meta.lore(List.of(ColorParser.of("<yellow>Level 9</yellow>").build(),
+            ColorParser.of("<red><italics>" + super.getDescription() + "</gray></italics>").build()));
         icon.setItemMeta(meta);
         super.setIcon(icon);
 
         skillsManager = AlathraSkills.getSkillsManager();
-        instance = AlathraSkills.getInstance();
         super.setCategory(skillsManager.skillCategories.get(3));
     }
 }
